--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,8 @@
   "start_url": "/",
   "scope": "/",
   "display": "standalone",
-  "background_color": "#ffffff\n",
-  "theme_color": "#000000\n",
+  "background_color": "#ffffff",
+  "theme_color": "#000000",
   "icons": [
     {
       "src": "icons/16.png",
