--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# webstorm (own)
+/.idea
+
+# PWA-related files (own)
+/public/sw.js
+/public/workbox-*.js
+
 # dependencies
 /node_modules
 /.pnp
