add superadmin dashboard

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "convex:dev": "npx convex dev",
     "start": "next start",
     "lint": "next lint"
   },
