--- a/package.json
+++ b/package.json
@@ -49,12 +49,12 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.525.0",
-    "next": "^15.5.6",
+    "next": "^15.5.7",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
+    "react": "^19.2.1",
     "react-day-picker": "^9.8.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^3.0.3",
     "recharts": "^2.15.4",
